# comfyui-downloader

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  TODO.md  comfyui-downloader.desktop  justfile
.sisyphus/evidence/: task-10-readme-gui.txt  task-10-version-consistency.txt  task-5-release-appimage.txt  task-5-tauri-ci-job.txt  task-5-yaml-valid.txt  task-6-makefile-build.txt  task-6-makefile-conventions.txt  task-6-makefile-dryrun.txt  task-8-changelog-coverage.txt  task-8-changelog-format.txt
docs/: architecture.md
docs/plans/: 2026-03-08-core-completions-design.md  2026-05-06-tui-design.md  2026-05-06-tui-implementation.md
docs/reference/: desktop-notifications-spec.md
gui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
gui/src/: App.svelte
gui/src/components/: Gallery.svelte  ModelCard.svelte  Sidebar.svelte
gui/src/lib/: api.ts  types.ts
src/: cli_main.rs  config.rs  lib.rs  main.rs  safetensor.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/catalog/: mod.rs  schema.rs
src/civitai/: mod.rs  types.rs
src/cli/: mod.rs
src/daemon/: downloader.rs  events.rs  mod.rs  notifier.rs  queue.rs  scanner.rs  updater.rs
src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
systemd/: comfyui-downloader.service
tests/: ipc_subscribe.rs
tests/stubs/: metadata.stub.json  model.stub.safetensors  model_response.stub.json  model_version_multi_file.stub.json
