[package]
name = "comfyui-gui"
version = "0.1.0"
edition = "2024"

[lib]
name = "comfyui_gui"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "comfyui-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
comfyui-downloader = { path = ".." }
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
